profilelist1exp/unpackaged/objects/CEM_Support_Email__c.object
<CustomObject>
    <fields>
        <fullName>Account_Country__c</fullName>
        <label>Account Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Support_Email__c</fullName>
        <label>Contract Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Custom_Service_Solution_EMail__c</fullName>
        <label>Custom Service Solution EMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Proposal_Support_Email__c</fullName>
        <label>Proposal Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SOW_Support_Email__c</fullName>
        <label>SOW Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>US_Fed_OCONUS_Support__c</fullName>
        <label>US Fed OCONUS Support</label>
        <type>Email</type>
    </fields>
    <label>CEM Support Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Country__c</columns>
        <columns>Proposal_Support_Email__c</columns>
        <columns>Contract_Support_Email__c</columns>
        <columns>Custom_Service_Solution_EMail__c</columns>
        <columns>SOW_Support_Email__c</columns>
        <columns>US_Fed_OCONUS_Support__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CEM Support Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEM Support Email</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>